# vector-simd

./: README.md  sync.sh  vector-simd.cabal
bench/: Bench.hs
cbits/: sum.c
src/Data/Vector/: SIMD.hs
test/: Spec.hs
test/Data/Vector/: SIMDSpec.hs
