name:                vector-simd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/agrafix/vector-simd#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.SIMD
  c-sources:           cbits/sum.c
  cc-options:          -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite vector-simd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Vector.SIMDSpec
  build-depends:       base
                     , vector-simd
                     , hspec
                     , vector
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

benchmark vector-simd-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  ghc-options:         -Wall -O2
  build-depends:       base
                     , vector
                     , vector-simd
                     , criterion
                     , deepseq
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/vector-simd
